--- a/css/typo.css
+++ b/css/typo.css
@@ -461,7 +461,7 @@ header div.scroll {
   //top: 0;
   width: 1.5rem;
   height: 2.5rem;
-  border: 0.2rem solid var(--colorSub);
+  border: 0.2rem solid var(--colorMain);
   border-radius: 2em;
   box-sizing: border-box;
 }
@@ -473,10 +473,16 @@ header div.scroll::before {
   content: '';
   width: 0.3rem;
   height: 0.3rem;
-  background-color: var(--colorSub);
+  background-color: var(--colorMain);
   border-radius: 100%;
   animation: sdb 2.5s infinite;
   box-sizing: border-box;
+}
+
+/* règle header h1 à supprimer */
+header h1 {
+  font-size: 5em;
+  color: --colorMain;
 }
 
 @keyframes sdb {
