--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ center-l {
  * Typo
  */
 :root {
-  font-family: sans-serif;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 /* Font sizes */
@@ -30,12 +30,48 @@ footer {
   max-width: none;
 }
 
-h1 {
-  /* ↓ 2.5 × the root font-size */
-  font-size: 2.5rem;
+h2,
+h3 {
+  max-width: 60ch;
+}
+
+h3 {
+  font-size: 2rem;
 }
 
 h2 {
-  /* ↓ 1.75 × the root font-size */
-  font-size: 1.75rem;
+  font-size: 2.5rem;
+}
+
+h2 strong {
+  font-size: 1.125em;
+}
+
+.stack {
+  --space: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.stack > * {
+  margin-top: 0;
+  margin-bottom: 0;
+} 
+
+.stack > * + * {
+  margin-top: var(--space);
+}
+
+.center {
+  box-sizing: content-box;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  max-width: var(--measure);
+  padding-left: 1;
+  padding-right: 1;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
